# eshdating

./: .env.example  .gitignore  README.md  alembic.ini  cookies.txt  dating_portal.code-workspace  pyproject.toml  structure.txt
docker/: Dockerfile  docker-compose.yml
migrations/: env.py
src/: main.py
src/core/: auth.py  config.py  dependencies.py  exceptions.py
src/domain/entities/: telegram_session.py  user.py
src/domain/repositories/: telegram_session_repository.py  user_repository.py
src/domain/services/: telegram_session_service.py  user_service.py
src/infrastructure/database/: session.py
src/infrastructure/database/models/: __init__.py  telegram_session.py  user.py
src/infrastructure/database/repositories/: telegram_session_repository.py  user_repository.py
src/presentation/api/v1/: auth.py  telegram.py
src/presentation/schemas/: telegram_session.py  user.py
static/css/: style.css
static/js/: main.js
templates/: add_telegram.html  dashboard.html  index.html  login.html  test_auth.html
