[project]
name = "dating-portal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "authx>=1.4.2",
    "email-validator>=2.2.0",
    "fastapi>=0.115.12",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.1.2",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.8.1",
    "python-jose[cryptography]>=3.4.0",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.1",
    "pyrogram>=2.0",
    "tgcrypto>=1.2.5",
]
